Bug 104812 - Impress crash on Minimize presentation
Summary: Impress crash on Minimize presentation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.5
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2016-12-20 12:13 UTC by Maxim Britov
Modified: 2017-01-09 09:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample (12.98 KB, application/vnd.oasis.opendocument.presentation)
2016-12-20 12:13 UTC, Maxim Britov
Details
gdb traceback (12.49 KB, text/plain)
2016-12-20 15:52 UTC, Maxim Britov
Details
backtrace with debuginfo (35.07 KB, text/plain)
2016-12-21 07:31 UTC, Maxim Britov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Britov 2016-12-20 12:13:15 UTC
Created attachment 129807 [details]
Sample

Libreoffice 5.2git (5.2.5)
Impress crashes on specific file on Minimize presentation

LO 5.2.5 RPM64: from 05.12 build to today's git crashes for me.
LO 5.2.5 DEB64: crashes for me
LO 5.2.5 WINx86: libreoffice-5-2~2016-12-17_07.45.26_LibreOfficeDev_5.2.5.0.0_Win_x86_en-US_de_ar_ja_ru_qtz.msi crashes here

5.3beta2 and 5.2.4.2 seems not affected.

Reproduce:
1. Open attached file
2. Tools - Minimize presentation
3. press Finish
4. try to save new mini somewhere...
Comment 1 Xisco Faulí 2016-12-20 15:12:35 UTC
I can't reproduce it in

Version: 5.2.2.2
Build ID: 1:5.2.2-0ubuntu2
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

or 

Version: 5.4.0.0.alpha0+
Build ID: 5a20df55ff829978c880b22e0a1f32c35d0ba30f
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 2 Maxim Britov 2016-12-20 15:34:28 UTC
(In reply to Xisco Faulí from comment #1)
> I can't reproduce it in
> 
> Version: 5.2.2.2
> Build ID: 1:5.2.2-0ubuntu2

You may try this:
http://dev-builds.libreoffice.org/daily/libreoffice-5-2/Linux-rpm_deb-x86_64@70-TDF/current/
Install into /opt/ check with /opt/libreofficedev5.2/program/soimpress 3333.odp
I had crash on my 16.04 yesterday with build from 14.12.2016

ps. As I said I can reproduce it only on 5.2.5 git/daily. Not 5.2.4.2, not 5.3beta2.
Comment 3 Maxim Britov 2016-12-20 15:52:45 UTC Comment hidden (obsolete)
Comment 4 Julien Nabet 2016-12-20 17:45:33 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this with rendering=gtk3, gtk, kde4 or gen.

Thought it could be fixed with https://cgit.freedesktop.org/libreoffice/core/commit/?id=f1c08d6503442ec257aa8535dfbe3743c743e4a0 but given the date of the 5.2.5 build you use, it seems to include it.
No idea then :-(
Comment 5 Buovjaga 2016-12-20 20:14:25 UTC
Maxim: could you do a trace with this debug build http://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@70-TDF-dbg/current/
I know it's a bit big, but then you get the debug symbols..
You only have to extract the archive and then just run it from the directory structure (program/soffice)

A quick way to run it with gdb is soffice --backtrace
Comment 6 Maxim Britov 2016-12-21 07:31:43 UTC
Created attachment 129839 [details]
backtrace with debuginfo

I'm on Gentoo amd64 here.
loimpress --backtrace from 20.12.2016 git ~17:00 UTC
gentoo ebuild 5.2.9999 with -ggdb and splitdebug feature.
Comment 7 Caolán McNamara 2016-12-21 09:19:19 UTC
That backtrace look similar to the one tweaked by https://cgit.freedesktop.org/libreoffice/core/commit/?id=f1c08d6503442ec257aa8535dfbe3743c743e4a0 for crashtesting find
Comment 8 Caolán McNamara 2016-12-21 09:27:15 UTC
yeah that above fix wasn't in 5-2 (because it wasn't needed) the thing that triggered the crash must have gotten backported to 5-2 as well, so now we need https://gerrit.libreoffice.org/#/c/32275/ in 5-2
Comment 9 Maxim Britov 2016-12-22 12:28:30 UTC
With this patch LO compiled and work fine. Thanks!
Comment 10 Commit Notification 2017-01-01 19:44:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8acf0a2157082a05fe912e849d3607d30eea2516&h=libreoffice-5-2

Resolves: tdf#104812 crash on exporting odp

It will be available in 5.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.