Resolves: tdf#104812 crash on exporting odp

was crashtesting: a gadzillion failures on export to odp

e.g. fdo35235-1.odp

(cherry picked from commit f1c08d6503442ec257aa8535dfbe3743c743e4a0)
(cherry picked from commit 09b856289c44c0fe792082b681d48cf5ee70d808)

Change-Id: I259cdc9ed073be2ad7d5208cd943d4f193f09c16
Reviewed-on: https://gerrit.libreoffice.org/32275
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit 8acf0a2157082a05fe912e849d3607d30eea2516)